--- a/front-end/.babelrc
+++ b/front-end/.babelrc
@@ -5,7 +5,12 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": [["component", [
+    {
+      "libraryName": "element-ui",
+      "styleLibraryName": "theme-default"
+    }
+  ]]],
   "comments": false,
   "env": {
     "test": {
