--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "element-ui": "^1.2.9",
     "vue": "^2.2.1",
     "vue-router": "^2.2.0",
     "vuex": "^2.2.1"
@@ -20,6 +21,7 @@
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-component": "^0.9.1",
     "babel-plugin-istanbul": "^3.1.2",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
