--- a/front-end/package.json
+++ b/front-end/package.json
@@ -54,12 +54,14 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.2",
     "lolex": "^1.5.2",
+    "marked": "^0.3.6",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.1",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
+    "prismjs": "^1.6.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.3",
     "semver": "^5.3.0",
