--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "element-ui": "^1.2.9",
-    "vue": "^2.2.1",
+    "element-ui": "1.2.9",
+    "vue": "2.2.4",
     "vue-router": "^2.2.0",
     "vuex": "^2.2.1"
   },
@@ -71,7 +71,7 @@
     "vue-loader": "^11.1.4",
     "vue-resource": "^1.2.1",
     "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.2.1",
+    "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
