--- a/front-end/package.json
+++ b/front-end/package.json
@@ -43,6 +43,7 @@
         "github-markdown-css": "^2.8.0",
         "html-webpack-plugin": "^2.28.0",
         "http-proxy-middleware": "^0.17.3",
+        "imagesloaded": "4.1.4",
         "inject-loader": "^2.0.1",
         "karma": "^1.4.1",
         "karma-coverage": "^1.1.1",
@@ -62,6 +63,7 @@
         "optimize-css-assets-webpack-plugin": "^1.3.0",
         "ora": "^1.1.0",
         "phantomjs-prebuilt": "^2.1.14",
+        "popmotion": "8.1.7",
         "prismjs": "^1.6.0",
         "rimraf": "^2.6.0",
         "sass-loader": "^6.0.3",
@@ -77,6 +79,7 @@
         "webpack-bundle-analyzer": "^2.2.1",
         "webpack-dev-middleware": "^1.10.0",
         "webpack-hot-middleware": "^2.16.1",
+        "webpack-jarvis": "0.1.1",
         "webpack-merge": "^2.6.1"
     },
     "engines": {
